<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/remote_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pc_remote_title"
        android:textColor="@color/text_primary"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/pc_remote_status"
        android:textColor="@color/accent"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remote_title" />

    <ImageButton
        android:id="@+id/remote_up"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_circle_soft"
        android:contentDescription="@string/remote_up"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_remote_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/remote_left"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="106dp"
        android:background="@drawable/bg_circle_soft"
        android:contentDescription="@string/remote_left"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_back_chevron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/remote_select"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="106dp"
        android:background="@drawable/bg_circle_soft"
        android:contentDescription="@string/remote_select"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_remote_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/remote_right"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="106dp"
        android:background="@drawable/bg_circle_soft"
        android:contentDescription="@string/remote_right"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_remote_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/remote_down"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/bg_circle_soft"
        android:contentDescription="@string/remote_down"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_remote_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remote_escape"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/bg_circle_soft"
        android:contentDescription="@string/key_name_escape"
        android:gravity="center"
        android:text="@string/pc_remote_escape_short"
        android:textColor="@color/text_primary"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remote_tab"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/bg_circle_soft"
        android:contentDescription="@string/key_name_tab"
        android:gravity="center"
        android:text="@string/key_name_tab"
        android:textColor="@color/text_primary"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
