<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2018 Google LLC All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/content_start_padding"
        android:paddingBottom="@dimen/content_end_padding"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header"
            android:src="@drawable/ic_launcher"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/title"
            style="@style/Text.Dialog.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textColor="@color/accent"
            android:textSize="12sp"
            android:text="@string/app_tagline"/>

        <TextView
            android:id="@+id/message"
            style="@style/Text.Dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/license"
            android:text="@string/pref_about_openSource"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/dark_grey"
            android:backgroundTint="@color/accent"/>

    </LinearLayout>

</ScrollView>
